# mypackage

./: LICENSE  README.md  pyproject.toml
mypackage/fibonacci/: fibonacci.py
mypackage/fibonacci/test/: test_fibonacci.py
