[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = ""
authors = ["Ishant Mrinal Haloi <mrinal.haloi11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
